--- a/public/partials/image_form.html
+++ b/public/partials/image_form.html
@@ -1,5 +1,19 @@
 <form action = "/" method="post" enctype="multipart/form-data">
     <input type="file" name="myimage" />
+    <br/>
+    <br/>
+    <select name="imageText">
+        <option value="Portret">Portret</option>
+        <option value="Technika">Technika</option>
+        </select>
+    <br/>
+    <br/>
+    <input type="text" name="imageCategory" placeholder="imageCategory" />
+    <br/>
+    <br/>
+    <input type="text" name="imageDescription" placeholder="imageDescription" />
+    <br/>
+    <br/>
     <input type="submit" name="submit" value="submit">
 </form>
 <img src="/image.png" />
