streaming data binary

--- a/public/partials/image_form.html
+++ b/public/partials/image_form.html
@@ -1,19 +1,29 @@
-<form action = "/" method="post" enctype="multipart/form-data">
-    <input type="file" name="myimage" />
-    <br/>
-    <br/>
-    <select name="imageText">
-        <option value="Portret">Portret</option>
-        <option value="Technika">Technika</option>
-        </select>
-    <br/>
-    <br/>
-    <input type="text" name="imageCategory" placeholder="imageCategory" />
-    <br/>
-    <br/>
-    <input type="text" name="imageDescription" placeholder="imageDescription" />
-    <br/>
-    <br/>
-    <input type="submit" name="submit" value="submit">
-</form>
+<form action="/" enctype="multipart/form-data" method="post">
+    <input type="text" name="title"><br>
+    <input type="file" name="upload"><br>
+    <input type="submit" value="Upload">
+    </form>'
+
+
+
+
+
+<!--<form action = "/" method="post" enctype="multipart/form-data">-->
+    <!--<input type="file" name="myimage" />-->
+    <!--<br/>-->
+    <!--<br/>-->
+    <!--<select name="imageCategory">-->
+        <!--<option value="Portret">Portret</option>-->
+        <!--<option value="Technika">Technika</option>-->
+        <!--</select>-->
+    <!--<br/>-->
+    <!--<br/>-->
+    <!--<input type="text" name="imageOwner" placeholder="imageOwner" />-->
+    <!--<br/>-->
+    <!--<br/>-->
+    <!--<input type="text" name="imageDescription" placeholder="imageDescription" />-->
+    <!--<br/>-->
+    <!--<br/>-->
+    <!--<input type="submit" name="submit" value="submit">-->
+<!--</form>-->
 <img src="/image.png" />
