category find API add and Angular's TechnologyController

--- a/public/partials/all.html
+++ b/public/partials/all.html
@@ -6,6 +6,7 @@
             <span> {{ post._id }} </span>
             <span> {{ post.number }} </span>
             <span> {{ post.message }} </span>
+            <span> Kategoria: {{ post.category }} </span>
         </li>
     </ul>
 </div>
