--- a/public/partials/technology.html
+++ b/public/partials/technology.html
@@ -1,1 +1,12 @@
-<p>Technologia</p>
+<div ng-controller='TechnologyController' class='container'>
+    <h3>Technologia</h3>
+    <ul class='list-group'>
+        <li ng-repeat="post in posts | orderBy:' -date'" class='list-group-item'>
+            <strong>@{{ post.owner }} </strong>
+            <span> {{ post._id }} </span>
+            <span> {{ post.number }} </span>
+            <span> {{ post.message }} </span>
+            <span> Kategoria: {{ post.category }} </span>
+        </li>
+    </ul>
+</div>
