Upload and display image upgrade

--- a/public/partials/image_form.html
+++ b/public/partials/image_form.html
@@ -8,18 +8,19 @@
     <input type="file" name="myimage" />
     <br/>
     <br/>
-    <select name="imageCategory">
-        <option value="Portret">Portret</option>
-        <option value="Technika">Technika</option>
+    <select name="category">
+        <option value="nature">Portret</option>
+        <option value="technology">Technika</option>
         </select>
     <br/>
     <br/>
-    <input type="text" name="imageOwner" placeholder="imageOwner" />
+    <input type="text" name="owner" placeholder="imageOwner" />
     <br/>
     <br/>
-    <input type="text" name="imageDescription" placeholder="imageDescription" />
+    <input type="text" name="description" placeholder="imageDescription" />
     <br/>
     <br/>
     <input type="submit" name="submit" value="submit">
 </form>
-<img src="/image.png" />
+<!--<img src="/57603cf21e4265cc2c46175a" />-->
+<!--<img src="/5760187e99d5fc3e18f37305" />-->
