--- a/public/partials/technology.html
+++ b/public/partials/technology.html
@@ -7,6 +7,10 @@
             <span> {{ post.number }} </span>
             <span> {{ post.message }} </span>
             <span> Kategoria: {{ post.category }} </span>
+            <span> Zdjęcie:  </span>
+            <img src ='/{{ post._id}}' />
+            <!--<img src="/5760448d0a7e873e33fec855" />-->
+
         </li>
     </ul>
 </div>
