--- a/views/index.html
+++ b/views/index.html
@@ -29,8 +29,9 @@
                 <li><a href='/#/'>Form</a></li>
                 <li><a href='/#/all'>Wszystko</a></li>
                 <li><a href='/#/technology'>Technologia</a></li>
-                <li><a href='/#/registry'>Rejestracja</a></li>
-                <li><a href='/#/login'>Logowanie</a></li>
+                <li><a href='/#/signup'>Rejestracja</a></li>
+                <li><a href='/#/signin'>Logowanie</a></li>
+                <li><a href='/#/user'>Zalogowany</a></li>
                 <li><a href='/#/rule'>Regulamin</a></li>
             </ul>
             <!--<p ng-if='currentUser' class='navbar-text navbar-right'>-->
