--- a/public/partials/image_form.html
+++ b/public/partials/image_form.html
@@ -3,9 +3,10 @@
     <!--<input type="file" name="upload"><br>-->
     <!--<input type="submit" value="Upload">-->
     <!--</form>'-->
+<div ng-controller='ImageController' class='container'>
 
 <form action = "/" method="post" enctype="multipart/form-data">
-    <input type="file" name="myimage" />
+    <input type="file" name="myimage" ng-click="change()"/>
     <br/>
     <br/>
     <select name="category">
@@ -14,7 +15,7 @@
         </select>
     <br/>
     <br/>
-    <input type="text" name="owner" placeholder="imageOwner" />
+    <input type="hidden" name= "owner" value=" {{loggeduser.firstname }} " />
     <br/>
     <br/>
     <input type="text" name="description" placeholder="imageDescription" />
@@ -22,5 +23,7 @@
     <br/>
     <input type="submit" name="submit" value="submit">
 </form>
+</button>
+</div>
 <!--<img src="/57603cf21e4265cc2c46175a" />-->
 <!--<img src="/5760187e99d5fc3e18f37305" />-->
