--- a/public/partials/image_form.html
+++ b/public/partials/image_form.html
@@ -18,7 +18,7 @@
     <input type="hidden" name= "owner" value=" {{loggeduser.firstname }} " />
     <br/>
     <br/>
-    <input type="text" name="description" placeholder="imageDescription" />
+    <input type="text" name="description" placeholder="Opis" />
     <br/>
     <br/>
     <input type="submit" name="submit" value="submit">
