navbar for user

--- a/public/partials/all.html
+++ b/public/partials/all.html
@@ -1,4 +1,24 @@
-<div ng-controller='AllController' class='container'>
+<nav class='navbar navbar-default'>
+
+    <ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">
+        <!--<li><a href='/#/'>Form</a></li>-->
+        <li><a href='/#/form'>Form</a></li>
+        <li><a href='/#/all'>Wszystko</a></li>
+        <li><a href='/#/technology'>Technologia</a></li>
+        <li><a href='/#/user'>Zalogowany</a></li>
+        <li><a href='/#/rule'>Regulamin</a></li>
+    </ul>
+
+    <ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">
+        <!--<li><a href='/#/'>Form</a></li>-->
+        <li><a href='/#/all'>Wszystko</a></li>
+        <li><a href='/#/technology'>Technologia</a></li>
+        <li><a href='/#/signup'>Rejestracja</a></li>
+        <li><a href='/#/signin'>Logowanie</a></li>
+        <li><a href='/#/rule'>Regulamin</a></li>
+    </ul>
+</nav>
+<!--<div ng-controller='AllController' class='container'>-->
     <h3>Wszystko</h3>
     <ul class='list-group'>
         <li ng-repeat="post in posts | orderBy:' -date'" class='list-group-item'>
@@ -8,4 +28,4 @@
             <div class="text-center"><h2>{{ post.description }} </h2></div>
         </li>
     </ul>
-</div>
+<!--</div>-->
