--- a/public/partials/register.html
+++ b/public/partials/register.html
@@ -1,4 +1,4 @@
-<form ng-submit="register(username, password)">
+z<form ng-submit="register(username, password)">
     <div class="form-group">
         <label>Username</label>
         <input class="form-control" type="text" ng-model="username">
