--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,3 +1,18 @@
+<nav class='navbar navbar-default'>
+    <div class='container'>
+        <ul class='nav navbar-nav'>
+            <!--<li><a href='/#/'>Form</a></li>-->
+            <!--<li><a href='/#/form'>Form</a></li>-->
+            <li><a href='/#/all'>Wszystko</a></li>
+            <li><a href='/#/technology'>Technologia</a></li>
+            <li><a href='/#/signup'>Rejestracja</a></li>
+            <li><a href='/#/signin'>Logowanie</a></li>
+            <li><a href='/#/user'>Zalogowany</a></li>
+            <li><a href='/#/rule'>Regulamin</a></li>
+        </ul>
+    </div>
+    </div>
+</nav>
 <div class="row">
     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="panel panel-info">
