--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
     <!--</div>-->
     <nav class='navbar navbar-default'>
         <div ng-controller='MenuController' class='container'>
-        <!--<div class='container'>-->
+        <div class='container'>
             <ul class='nav navbar-nav'>
                 <!--<li><a href='/#/'>Form</a></li>-->
                 <li><a href='/#/form'>Form</a></li>
@@ -37,21 +37,41 @@
                 <li><a href='/#/rule'>Regulamin</a></li>
             </ul>
 
-            <button id="btn btn-default" type="button" class="btn btn-primary" ng-click="change()">User Info
-            <div ng-if="loggeduser != loggeduser.fistname">
-                <!-- code to render a large video block-->
-                <p> nie jest null</p>
-            </div>
+            <!--<ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">-->
+                <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+                <!--<li><a href='/#/form'>Form</a></li>-->
+                <!--<li><a href='/#/all'>Wszystko</a></li>-->
+                <!--<li><a href='/#/technology'>Technologia</a></li>-->
+                <!--<li><a href='/#/user'>Zalogowany</a></li>-->
+                <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+            <!--</ul>-->
 
-            <div ng-if="loggeduser == loggeduser.fistname">
-                <!-- code to render a large video block-->
-                <p> jest null</p>
-            </div>
+            <!--<ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">-->
+                <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+                <!--<li><a href='/#/all'>Wszystko</a></li>-->
+                <!--<li><a href='/#/technology'>Technologia</a></li>-->
+                <!--<li><a href='/#/signup'>Rejestracja</a></li>-->
+                <!--<li><a href='/#/signin'>Logowanie</a></li>-->
+                <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+            <!--</ul>-->
+
+            <!--<div ng-if="loggeduser != loggeduser.fistname">-->
+                <!--&lt;!&ndash; code to render a large video block&ndash;&gt;-->
+                <!--<p> nie jest null</p>-->
+            <!--</div>-->
+
+            <!--<div ng-if="loggeduser == loggeduser.fistname">-->
+                <!--&lt;!&ndash; code to render a large video block&ndash;&gt;-->
+                <!--<p> jest null</p>-->
+            <!--</div>-->
+
             <!--<p ng-if='currentUser' class='navbar-text navbar-right'>-->
                 <!--Zalogowany jako {{currentUser.username}}-->
             <!--</p>-->
+            <button id="btn btn-default" type="button" class="btn btn-primary" ng-click="change()">User Info</button>
         </div>
     </nav>
+
     <div class="jumbotron">
         <div ng-view>
 
