--- a/public/partials/all.html
+++ b/public/partials/all.html
@@ -1,14 +1,7 @@
 <nav class='navbar navbar-default'>
 
-    <ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">
-        <!--<li><a href='/#/'>Form</a></li>-->
-        <li><a href='/#/form'>Form</a></li>
-        <li><a href='/#/all'>Wszystko</a></li>
-        <li><a href='/#/technology'>Technologia</a></li>
-        <li><a href='/#/user'>Zalogowany</a></li>
-        <li><a href='/#/rule'>Regulamin</a></li>
-    </ul>
 
+    <div class='container'>
     <ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">
         <!--<li><a href='/#/'>Form</a></li>-->
         <li><a href='/#/all'>Wszystko</a></li>
@@ -17,8 +10,18 @@
         <li><a href='/#/signin'>Logowanie</a></li>
         <li><a href='/#/rule'>Regulamin</a></li>
     </ul>
+    <ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">
+        <!--<li><a href='/#/'>Form</a></li>-->
+        <li><a href='/#/form'>Form</a></li>
+        <li><a href='/#/all'>Wszystko</a></li>
+        <li><a href='/#/technology'>Technologia</a></li>
+        <li><a href='/#/user'>Zalogowany</a></li>
+        <li><a href='/#/rule'>Regulamin</a></li>
+    </ul>
+        </div>
 </nav>
 <!--<div ng-controller='AllController' class='container'>-->
+<div class="jumbotron">
     <h3>Wszystko</h3>
     <ul class='list-group'>
         <li ng-repeat="post in posts | orderBy:' -date'" class='list-group-item'>
@@ -28,4 +31,5 @@
             <div class="text-center"><h2>{{ post.description }} </h2></div>
         </li>
     </ul>
+    </div>
 <!--</div>-->
