--- a/public/partials/rule.html
+++ b/public/partials/rule.html
@@ -1,5 +1,5 @@
 <nav class='navbar navbar-default'>
-
+    <div class='container'>
     <ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">
         <!--<li><a href='/#/'>Form</a></li>-->
         <li><a href='/#/form'>Form</a></li>
@@ -17,5 +17,8 @@
         <li><a href='/#/signin'>Logowanie</a></li>
         <li><a href='/#/rule'>Regulamin</a></li>
     </ul>
+        </div>
 </nav>
+<div class="jumbotron">
 <p>Regulamin</p>
+    </div>
