--- a/public/partials/signin.html
+++ b/public/partials/signin.html
@@ -13,6 +13,7 @@
     </div>
     </div>
 </nav>
+<div class="jumbotron">
 <div class="row">
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="panel panel-info" >
@@ -57,3 +58,4 @@
         </div>
     </div>
 </div>
+    </div>
