--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -13,6 +13,7 @@
     </div>
     </div>
 </nav>
+<div class="jumbotron">
 <div class="row">
     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="panel panel-info">
@@ -81,3 +82,4 @@
 
     </div>
 </div>
+    </div>
