--- a/views/index.html
+++ b/views/index.html
@@ -23,19 +23,19 @@
             <!--</div>-->
         <!--</form>-->
     <!--</div>-->
-    <nav class='navbar navbar-default'>
-        <div ng-controller='MenuController' class='container'>
-        <div class='container'>
-            <ul class='nav navbar-nav'>
-                <!--<li><a href='/#/'>Form</a></li>-->
-                <li><a href='/#/form'>Form</a></li>
-                <li><a href='/#/all'>Wszystko</a></li>
-                <li><a href='/#/technology'>Technologia</a></li>
-                <li><a href='/#/signup'>Rejestracja</a></li>
-                <li><a href='/#/signin'>Logowanie</a></li>
-                <li><a href='/#/user'>Zalogowany</a></li>
-                <li><a href='/#/rule'>Regulamin</a></li>
-            </ul>
+    <!--<nav class='navbar navbar-default'>-->
+        <!--<div ng-controller='MenuController' class='container'>-->
+        <!--<div class='container'>-->
+            <!--<ul class='nav navbar-nav'>-->
+                <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+                <!--<li><a href='/#/form'>Form</a></li>-->
+                <!--<li><a href='/#/all'>Wszystko</a></li>-->
+                <!--<li><a href='/#/technology'>Technologia</a></li>-->
+                <!--<li><a href='/#/signup'>Rejestracja</a></li>-->
+                <!--<li><a href='/#/signin'>Logowanie</a></li>-->
+                <!--<li><a href='/#/user'>Zalogowany</a></li>-->
+                <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+            <!--</ul>-->
 
             <!--<ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">-->
                 <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
@@ -68,15 +68,15 @@
             <!--<p ng-if='currentUser' class='navbar-text navbar-right'>-->
                 <!--Zalogowany jako {{currentUser.username}}-->
             <!--</p>-->
-            <button id="btn btn-default" type="button" class="btn btn-primary" ng-click="change()">User Info</button>
-        </div>
-    </nav>
+            <!--<button id="btn btn-default" type="button" class="btn btn-primary" ng-click="change()">User Info</button>-->
+        <!--</div>-->
+    <!--</nav>-->
 
-    <div class="jumbotron">
+    <!--<div class="jumbotron">-->
         <div ng-view>
 
         </div>
-    </div>
+    <!--</div>-->
 
 </div>
 
