--- a/public/partials/signin.html
+++ b/public/partials/signin.html
@@ -6,8 +6,8 @@
             <li><a href='/#/all'>Wszystko</a></li>
             <li><a href='/#/technology'>Technologia</a></li>
             <li><a href='/#/signup'>Rejestracja</a></li>
-            <li><a href='/#/signin'>Logowanie</a></li>
-            <li><a href='/#/user'>Zalogowany</a></li>
+            <li class='active'><a href='/#/signin'>Logowanie</a></li>
+            <!--<li><a href='/#/user'>Zalogowany</a></li>-->
             <li><a href='/#/rule'>Regulamin</a></li>
         </ul>
     </div>
