--- a/public/partials/userinfo.html
+++ b/public/partials/userinfo.html
@@ -5,7 +5,7 @@
         <li><a href='/#/form'>Form</a></li>
         <li><a href='/#/all'>Wszystko</a></li>
         <li><a href='/#/technology'>Technologia</a></li>
-        <li><a href='/#/user'>Zalogowany</a></li>
+        <li class='active'><a href='/#/user'>Zalogowany</a></li>
         <li><a href='/#/rule'>Regulamin</a></li>
     </ul>
 
