--- a/public/partials/all.html
+++ b/public/partials/all.html
@@ -4,7 +4,7 @@
     <div class='container'>
     <ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">
         <!--<li><a href='/#/'>Form</a></li>-->
-        <li><a href='/#/all'>Wszystko</a></li>
+        <li class='active'><a href='/#/all'>Wszystko</a></li>
         <li><a href='/#/technology'>Technologia</a></li>
         <li><a href='/#/signup'>Rejestracja</a></li>
         <li><a href='/#/signin'>Logowanie</a></li>
@@ -13,7 +13,7 @@
     <ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">
         <!--<li><a href='/#/'>Form</a></li>-->
         <li><a href='/#/form'>Form</a></li>
-        <li><a href='/#/all'>Wszystko</a></li>
+        <li class='active'><a href='/#/all'>Wszystko</a></li>
         <li><a href='/#/technology'>Technologia</a></li>
         <li><a href='/#/user'>Zalogowany</a></li>
         <li><a href='/#/rule'>Regulamin</a></li>
@@ -22,6 +22,7 @@
 </nav>
 <!--<div ng-controller='AllController' class='container'>-->
 <div class="jumbotron">
+
     <h3>Wszystko</h3>
     <ul class='list-group'>
         <li ng-repeat="post in posts | orderBy:' -date'" class='list-group-item'>
