--- a/public/partials/rule.html
+++ b/public/partials/rule.html
@@ -6,7 +6,7 @@
         <li><a href='/#/all'>Wszystko</a></li>
         <li><a href='/#/technology'>Technologia</a></li>
         <li><a href='/#/user'>Zalogowany</a></li>
-        <li><a href='/#/rule'>Regulamin</a></li>
+        <li class='active'><a href='/#/rule'>Regulamin</a></li>
     </ul>
 
     <ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">
@@ -15,7 +15,7 @@
         <li><a href='/#/technology'>Technologia</a></li>
         <li><a href='/#/signup'>Rejestracja</a></li>
         <li><a href='/#/signin'>Logowanie</a></li>
-        <li><a href='/#/rule'>Regulamin</a></li>
+        <li class='active'><a href='/#/rule'>Regulamin</a></li>
     </ul>
         </div>
 </nav>
