--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -5,9 +5,9 @@
             <!--<li><a href='/#/form'>Form</a></li>-->
             <li><a href='/#/all'>Wszystko</a></li>
             <li><a href='/#/technology'>Technologia</a></li>
-            <li><a href='/#/signup'>Rejestracja</a></li>
+            <li class='active'><a href='/#/signup'>Rejestracja</a></li>
             <li><a href='/#/signin'>Logowanie</a></li>
-            <li><a href='/#/user'>Zalogowany</a></li>
+            <!--<li><a href='/#/user'>Zalogowany</a></li>-->
             <li><a href='/#/rule'>Regulamin</a></li>
         </ul>
     </div>
