błąd do poprawy...

--- a/public/partials/image_form.html
+++ b/public/partials/image_form.html
@@ -7,7 +7,7 @@
     <div class='container'>
     <ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">
         <!--<li><a href='/#/'>Form</a></li>-->
-        <li class='active'><a href='/#/form'>Form</a></li>
+        <li class='active'><a>Form</a></li>
         <li><a href='/#/all'>Wszystko</a></li>
         <li><a href='/#/technology'>Technologia</a></li>
         <li><a href='/#/user'>Zalogowany</a></li>
