--- a/public/partials/signin.html
+++ b/public/partials/signin.html
@@ -1,19 +1,19 @@
-<nav class='navbar navbar-default'>
-    <div class='container'>
-        <ul class='nav navbar-nav'>
-            <!--<li><a href='/#/'>Form</a></li>-->
-            <!--<li><a href='/#/form'>Form</a></li>-->
-            <li><a href='/#/all'>Wszystko</a></li>
-            <li><a href='/#/technology'>Technologia</a></li>
-            <li><a href='/#/signup'>Rejestracja</a></li>
-            <li class='active'><a>Logowanie</a></li>
-            <!--<li><a href='/#/user'>Zalogowany</a></li>-->
-            <li><a href='/#/rule'>Regulamin</a></li>
-        </ul>
+<!--<nav class='navbar navbar-default'>-->
+    <!--<div class='container'>-->
+        <!--<ul class='nav navbar-nav'>-->
+            <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+            <!--&lt;!&ndash;<li><a href='/#/form'>Form</a></li>&ndash;&gt;-->
+            <!--<li><a href='/#/all'>Wszystko</a></li>-->
+            <!--<li><a href='/#/technology'>Technologia</a></li>-->
+            <!--<li><a href='/#/signup'>Rejestracja</a></li>-->
+            <!--<li class='active'><a>Logowanie</a></li>-->
+            <!--&lt;!&ndash;<li><a href='/#/user'>Zalogowany</a></li>&ndash;&gt;-->
+            <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+        <!--</ul>-->
 
-    </div>
-    </div>
-</nav>
+    <!--</div>-->
+    <!--</div>-->
+<!--</nav>-->
 <div class="jumbotron">
 <div class="row">
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
@@ -38,7 +38,7 @@
 
                     <div style="margin-top:10px" class="form-group">
                         <div class="col-sm-12 controls">
-                            <a id="btn-login"   class="btn btn-success" ng-click="login(user)">Login  </a>
+                            <a id="btn-login" class="btn btn-success" ng-click="login(user)">Login  </a>
                             <!--<a id="btn-fblogin"   class="btn btn-primary" ng-click="loginfb()">Login with Facebook</a>-->
 
                         </div>
