--- a/public/partials/all.html
+++ b/public/partials/all.html
@@ -1,25 +1,25 @@
-<nav class='navbar navbar-default'>
+<!--<nav class='navbar navbar-default'>-->
 
 
-    <div class='container'>
-    <ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">
-        <!--<li><a href='/#/'>Form</a></li>-->
-        <li class='active'><a>Wszystko</a></li>
-        <li><a href='/#/technology'>Technologia</a></li>
-        <li><a href='/#/signup'>Rejestracja</a></li>
-        <li><a href='/#/signin'>Logowanie</a></li>
-        <li><a href='/#/rule'>Regulamin</a></li>
-    </ul>
-    <ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">
-        <!--<li><a href='/#/'>Form</a></li>-->
-        <li><a href='/#/form'>Form</a></li>
-        <li class='active'><a>Wszystko</a></li>
-        <li><a href='/#/technology'>Technologia</a></li>
-        <li><a href='/#/user'>Zalogowany</a></li>
-        <li><a href='/#/rule'>Regulamin</a></li>
-    </ul>
-        </div>
-</nav>
+    <!--<div class='container'>-->
+    <!--<ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">-->
+        <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+        <!--<li class='active'><a>Wszystko</a></li>-->
+        <!--<li><a href='/#/technology'>Technologia</a></li>-->
+        <!--<li><a href='/#/signup'>Rejestracja</a></li>-->
+        <!--<li><a href='/#/signin'>Logowanie</a></li>-->
+        <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+    <!--</ul>-->
+    <!--<ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">-->
+        <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+        <!--<li><a href='/#/form'>Form</a></li>-->
+        <!--<li class='active'><a>Wszystko</a></li>-->
+        <!--<li><a href='/#/technology'>Technologia</a></li>-->
+        <!--<li><a href='/#/user'>Zalogowany</a></li>-->
+        <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+    <!--</ul>-->
+        <!--</div>-->
+<!--</nav>-->
 <!--<div ng-controller='AllController' class='container'>-->
 <div class="jumbotron">
 
