--- a/public/partials/image_form.html
+++ b/public/partials/image_form.html
@@ -3,27 +3,27 @@
     <!--<input type="file" name="upload"><br>-->
     <!--<input type="submit" value="Upload">-->
     <!--</form>'-->
-<nav class='navbar navbar-default'>
-    <div class='container'>
-    <ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">
-        <!--<li><a href='/#/'>Form</a></li>-->
-        <li class='active'><a>Form</a></li>
-        <li><a href='/#/all'>Wszystko</a></li>
-        <li><a href='/#/technology'>Technologia</a></li>
-        <li><a href='/#/user'>Zalogowany</a></li>
-        <li><a href='/#/rule'>Regulamin</a></li>
-    </ul>
+<!--<nav class='navbar navbar-default'>-->
+    <!--<div class='container'>-->
+    <!--<ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">-->
+        <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+        <!--<li class='active'><a>Form</a></li>-->
+        <!--<li><a href='/#/all'>Wszystko</a></li>-->
+        <!--<li><a href='/#/technology'>Technologia</a></li>-->
+        <!--<li><a href='/#/user'>Zalogowany</a></li>-->
+        <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+    <!--</ul>-->
 
-    <ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">
-        <!--<li><a href='/#/'>Form</a></li>-->
-        <li><a href='/#/all'>Wszystko</a></li>
-        <li><a href='/#/technology'>Technologia</a></li>
-        <li><a href='/#/signup'>Rejestracja</a></li>
-        <li><a href='/#/signin'>Logowanie</a></li>
-        <li><a href='/#/rule'>Regulamin</a></li>
-    </ul>
-        </div>
-</nav>
+    <!--<ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">-->
+        <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+        <!--<li><a href='/#/all'>Wszystko</a></li>-->
+        <!--<li><a href='/#/technology'>Technologia</a></li>-->
+        <!--<li><a href='/#/signup'>Rejestracja</a></li>-->
+        <!--<li><a href='/#/signin'>Logowanie</a></li>-->
+        <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+    <!--</ul>-->
+        <!--</div>-->
+<!--</nav>-->
 <!--<div ng-controller='ImageController' class='container'>-->
 <div class="jumbotron">
 <form action = "/" method="post" enctype="multipart/form-data">
