--- a/public/partials/rule.html
+++ b/public/partials/rule.html
@@ -1,24 +1,24 @@
-<nav class='navbar navbar-default'>
-    <div class='container'>
-    <ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">
-        <!--<li><a href='/#/'>Form</a></li>-->
-        <li><a href='/#/form'>Form</a></li>
-        <li><a href='/#/all'>Wszystko</a></li>
-        <li><a href='/#/technology'>Technologia</a></li>
-        <li><a href='/#/user'>Zalogowany</a></li>
-        <li class='active'><a>Regulamin</a></li>
-    </ul>
+<!--<nav class='navbar navbar-default'>-->
+    <!--<div class='container'>-->
+    <!--<ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">-->
+        <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+        <!--<li><a href='/#/form'>Form</a></li>-->
+        <!--<li><a href='/#/all'>Wszystko</a></li>-->
+        <!--<li><a href='/#/technology'>Technologia</a></li>-->
+        <!--<li><a href='/#/user'>Zalogowany</a></li>-->
+        <!--<li class='active'><a>Regulamin</a></li>-->
+    <!--</ul>-->
 
-    <ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">
-        <!--<li><a href='/#/'>Form</a></li>-->
-        <li><a href='/#/all'>Wszystko</a></li>
-        <li><a href='/#/technology'>Technologia</a></li>
-        <li><a href='/#/signup'>Rejestracja</a></li>
-        <li><a href='/#/signin'>Logowanie</a></li>
-        <li class='active'><a>Regulamin</a></li>
-    </ul>
-        </div>
-</nav>
+    <!--<ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">-->
+        <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+        <!--<li><a href='/#/all'>Wszystko</a></li>-->
+        <!--<li><a href='/#/technology'>Technologia</a></li>-->
+        <!--<li><a href='/#/signup'>Rejestracja</a></li>-->
+        <!--<li><a href='/#/signin'>Logowanie</a></li>-->
+        <!--<li class='active'><a>Regulamin</a></li>-->
+    <!--</ul>-->
+        <!--</div>-->
+<!--</nav>-->
 
 
 <div class="jumbotron">
