--- a/public/partials/technology.html
+++ b/public/partials/technology.html
@@ -1,26 +1,26 @@
 <!--<div ng-controller='TechnologyController' class='container'>-->
-<nav class='navbar navbar-default'>
-    <div class='container'>
-    <ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">
-        <!--<li><a href='/#/'>Form</a></li>-->
-        <li><a href='/#/all'>Wszystko</a></li>
-        <li class='active'><a>Technologia</a></li>
-        <li><a href='/#/signup'>Rejestracja</a></li>
-        <li><a href='/#/signin'>Logowanie</a></li>
-        <li><a href='/#/rule'>Regulamin</a></li>
-    </ul>
-    <ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">
-        <!--<li><a href='/#/'>Form</a></li>-->
-        <li><a href='/#/form'>Form</a></li>
-        <li><a href='/#/all'>Wszystko</a></li>
-        <li class='active'><a>Technologia</a></li>
-        <li><a href='/#/user'>Zalogowany</a></li>
-        <li><a href='/#/rule'>Regulamin</a></li>
-    </ul>
-        </div>
+<!--<nav class='navbar navbar-default'>-->
+    <!--<div class='container'>-->
+    <!--<ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">-->
+        <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+        <!--<li><a href='/#/all'>Wszystko</a></li>-->
+        <!--<li class='active'><a>Technologia</a></li>-->
+        <!--<li><a href='/#/signup'>Rejestracja</a></li>-->
+        <!--<li><a href='/#/signin'>Logowanie</a></li>-->
+        <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+    <!--</ul>-->
+    <!--<ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">-->
+        <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+        <!--<li><a href='/#/form'>Form</a></li>-->
+        <!--<li><a href='/#/all'>Wszystko</a></li>-->
+        <!--<li class='active'><a>Technologia</a></li>-->
+        <!--<li><a href='/#/user'>Zalogowany</a></li>-->
+        <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+    <!--</ul>-->
+        <!--</div>-->
 
 
-</nav>
+<!--</nav>-->
 <div class="jumbotron">
 <h3>Technologia</h3>
     <ul class='list-group'>
