--- a/public/partials/userinfo.html
+++ b/public/partials/userinfo.html
@@ -1,25 +1,25 @@
-<nav class='navbar navbar-default'>
-    <div class='container'>
-        <ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">
-        <!--<li><a href='/#/'>Form</a></li>-->
-        <li><a href='/#/form'>Form</a></li>
-        <li><a href='/#/all'>Wszystko</a></li>
-        <li><a href='/#/technology'>Technologia</a></li>
-        <li class='active'><a>Zalogowany</a></li>
-        <li><a href='/#/rule'>Regulamin</a></li>
-        </ul>
+<!--<nav class='navbar navbar-default'>-->
+    <!--<div class='container'>-->
+        <!--<ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">-->
+        <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+        <!--<li><a href='/#/form'>Form</a></li>-->
+        <!--<li><a href='/#/all'>Wszystko</a></li>-->
+        <!--<li><a href='/#/technology'>Technologia</a></li>-->
+        <!--<li class='active'><a>Zalogowany</a></li>-->
+        <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+        <!--</ul>-->
 
-        <ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">
-        <!--<li><a href='/#/'>Form</a></li>-->
-        <li><a href='/#/all'>Wszystko</a></li>
-        <li><a href='/#/technology'>Technologia</a></li>
-        <li><a href='/#/signup'>Rejestracja</a></li>
-        <li><a href='/#/signin'>Logowanie</a></li>
-        <li><a href='/#/rule'>Regulamin</a></li>
-        </ul>
+        <!--<ul class='nav navbar-nav' ng-if="loggeduser == loggeduser.fistname">-->
+        <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
+        <!--<li><a href='/#/all'>Wszystko</a></li>-->
+        <!--<li><a href='/#/technology'>Technologia</a></li>-->
+        <!--<li><a href='/#/signup'>Rejestracja</a></li>-->
+        <!--<li><a href='/#/signin'>Logowanie</a></li>-->
+        <!--<li><a href='/#/rule'>Regulamin</a></li>-->
+        <!--</ul>-->
 
-    </div>
-</nav>
+    <!--</div>-->
+<!--</nav>-->
 <div class="jumbotron">
     <div class="row">
         <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
