--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
     <script src="/angular.js"></script>
 
 </head>
-<body>
+<body ng-controller='ApplicationCtrl'>
 <div class='container'>
     <!--<div class="jumbotron">-->
         <!--<form role="form">-->
@@ -23,19 +23,20 @@
             <!--</div>-->
         <!--</form>-->
     <!--</div>-->
-    <!--<nav class='navbar navbar-default'>-->
+    <nav class='navbar navbar-default'>
         <!--<div ng-controller='MenuController' class='container'>-->
-        <!--<div class='container'>-->
-            <!--<ul class='nav navbar-nav'>-->
-                <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
-                <!--<li><a href='/#/form'>Form</a></li>-->
-                <!--<li><a href='/#/all'>Wszystko</a></li>-->
-                <!--<li><a href='/#/technology'>Technologia</a></li>-->
-                <!--<li><a href='/#/signup'>Rejestracja</a></li>-->
-                <!--<li><a href='/#/signin'>Logowanie</a></li>-->
-                <!--<li><a href='/#/user'>Zalogowany</a></li>-->
-                <!--<li><a href='/#/rule'>Regulamin</a></li>-->
-            <!--</ul>-->
+        <div class='container'>
+            <ul class='nav navbar-nav'>
+                <!--<li><a href='/#/'>Form</a></li>-->
+                <li><a href='/#/form'>Form</a></li>
+                <li><a href='/#/all'>Wszystko</a></li>
+                <li><a href='/#/technology'>Technologia</a></li>
+                <li><a href='/#/signup'>Rejestracja</a></li>
+                <li><a href='/#/signin'>Logowanie</a></li>
+                <li><a href='/#/user'>Zalogowany</a></li>
+                <li><a href='/#/rule'>Regulamin</a></li>
+                <li><a>{{ loggeduser.firstname }}</a></li>
+            </ul>
 
             <!--<ul class='nav navbar-nav' ng-if="loggeduser != loggeduser.fistname">-->
                 <!--&lt;!&ndash;<li><a href='/#/'>Form</a></li>&ndash;&gt;-->
@@ -64,13 +65,13 @@
                 <!--&lt;!&ndash; code to render a large video block&ndash;&gt;-->
                 <!--<p> jest null</p>-->
             <!--</div>-->
-
             <!--<p ng-if='currentUser' class='navbar-text navbar-right'>-->
                 <!--Zalogowany jako {{currentUser.username}}-->
             <!--</p>-->
             <!--<button id="btn btn-default" type="button" class="btn btn-primary" ng-click="change()">User Info</button>-->
-        <!--</div>-->
-    <!--</nav>-->
+        </div>
+
+    </nav>
 
     <!--<div class="jumbotron">-->
         <div ng-view>
